--- a/allensdk/brain_observatory/nwb/ndx-aibs-behavior-ophys.extension.yaml
+++ b/allensdk/brain_observatory/nwb/ndx-aibs-behavior-ophys.extension.yaml
@@ -3,45 +3,45 @@ groups:
   neurodata_type_inc: LabMetaData
   doc: Metadata for behavior or behavior + ophys task parameters
   attributes:
+  - name: stimulus_duration_sec
+    dtype: float
+    doc: Duration of each stimulus presentation in seconds
   - name: stimulus_distribution
     dtype: text
     doc: Distribution type of drawing change times (e.g. 'geometric', 'exponential')
   - name: task
     dtype: text
     doc: The name of the behavioral task
-  - name: reward_volume
-    dtype: float
-    doc: Volume of water (in mL) delivered as reward
-  - name: n_stimulus_frames
-    dtype: int
-    doc: Total number of stimuli frames
-  - name: auto_reward_volume
-    dtype: float
-    doc: Volume of water (in mL) delivered as an automatic reward
-  - name: session_type
-    dtype: text
-    doc: Stage of behavioral task
-  - name: response_window_sec
-    dtype: text
-    shape:
-    - 2
-    doc: The lower and upper bound (in seconds) for a randomly chosen time window
-      where subject response influences trial outcome
   - name: blank_duration_sec
     dtype: text
     shape:
     - 2
     doc: The lower and upper bound (in seconds) for a randomly chosen inter-stimulus
       interval duration for a trial
-  - name: stimulus_duration_sec
+  - name: auto_reward_volume
     dtype: float
-    doc: Duration of each stimulus presentation in seconds
-  - name: omitted_flash_fraction
-    dtype: float
-    doc: Fraction of flashes/image presentations that were omitted
+    doc: Volume of water (in mL) delivered as an automatic reward
   - name: stimulus
     dtype: text
     doc: Stimulus type
+  - name: reward_volume
+    dtype: float
+    doc: Volume of water (in mL) delivered as reward
+  - name: response_window_sec
+    dtype: text
+    shape:
+    - 2
+    doc: The lower and upper bound (in seconds) for a randomly chosen time window
+      where subject response influences trial outcome
+  - name: n_stimulus_frames
+    dtype: int
+    doc: Total number of stimuli frames
+  - name: session_type
+    dtype: text
+    doc: Stage of behavioral task
+  - name: omitted_flash_fraction
+    dtype: float
+    doc: Fraction of flashes/image presentations that were omitted
 - neurodata_type_def: BehaviorSubject
   neurodata_type_inc: Subject
   doc: Metadata for an AIBS behavior or behavior + ophys subject
@@ -49,6 +49,9 @@ groups:
   - name: reporter_line
     dtype: text
     doc: Reporter line of subject
+  - name: age
+    dtype: text
+    doc: Age code of the specimen donor/subject
   - name: driver_line
     dtype: text
     shape:
@@ -58,56 +61,56 @@ groups:
   neurodata_type_inc: LabMetaData
   doc: Metadata for behavior and behavior + ophys experiments
   attributes:
-  - name: behavior_session_uuid
-    dtype: text
-    doc: MTrain record for session, also called foraging_id
   - name: equipment_name
     dtype: text
     doc: Name of behavior or optical physiology experiment rig
-  - name: session_type
-    dtype: text
-    doc: Experimental session description
-  - name: behavior_session_id
-    dtype: int
-    doc: The unique ID for the behavior session
   - name: stimulus_frame_rate
     dtype: float
     doc: Frame rate (frames/second) of the visual_stimulus from the monitor
+  - name: behavior_session_id
+    dtype: int
+    doc: The unique ID for the behavior session
+  - name: behavior_session_uuid
+    dtype: text
+    doc: MTrain record for session, also called foraging_id
+  - name: session_type
+    dtype: text
+    doc: Experimental session description
 - neurodata_type_def: OphysBehaviorMetadata
   neurodata_type_inc: BehaviorMetadata
   doc: Metadata for behavior + ophys experiments
   attributes:
-  - name: experiment_container_id
-    dtype: int
-    doc: Container ID for the container that contains this ophys session
-  - name: behavior_session_id
-    dtype: int
-    doc: The unique ID for the behavior session
   - name: behavior_session_uuid
     dtype: text
     doc: MTrain record for session, also called foraging_id
-  - name: equipment_name
-    dtype: text
-    doc: Name of behavior or optical physiology experiment rig
   - name: session_type
     dtype: text
     doc: Experimental session description
-  - name: field_of_view_width
+  - name: equipment_name
+    dtype: text
+    doc: Name of behavior or optical physiology experiment rig
+  - name: stimulus_frame_rate
+    dtype: float
+    doc: Frame rate (frames/second) of the visual_stimulus from the monitor
+  - name: behavior_session_id
     dtype: int
-    doc: Width of optical physiology imaging plane in pixels
-  - name: ophys_session_id
-    dtype: int
-    doc: Unique ID for the ophys session
-  - name: field_of_view_height
-    dtype: int
-    doc: Height of optical physiology imaging plane in pixels
+    doc: The unique ID for the behavior session
   - name: imaging_plane_group_count
     dtype: int
     doc: The total number of plane groups collected in a session for a mesoscope experiment.
       Will be 0 if the scope did not capture multiple concurrent imaging planes.
+  - name: ophys_session_id
+    dtype: int
+    doc: Unique ID for the ophys session
   - name: ophys_experiment_id
     dtype: int
     doc: Unique ID for the ophys experiment (aka imaging plane)
+  - name: field_of_view_height
+    dtype: int
+    doc: Height of optical physiology imaging plane in pixels
+  - name: experiment_container_id
+    dtype: int
+    doc: Container ID for the container that contains this ophys session
   - name: imaging_depth
     dtype: int
     doc: Depth (microns) below the cortical surface targeted for two-photon acquisition
@@ -115,9 +118,9 @@ groups:
     dtype: int
     doc: A numeric index which indicates the order that an imaging plane was acquired
       for a mesoscope experiment. Will be -1 for non-mesoscope data
-  - name: stimulus_frame_rate
-    dtype: float
-    doc: Frame rate (frames/second) of the visual_stimulus from the monitor
+  - name: field_of_view_width
+    dtype: int
+    doc: Width of optical physiology imaging plane in pixels
 - neurodata_type_def: OphysEyeTrackingRigMetadata
   neurodata_type_inc: NWBDataInterface
   doc: Metadata for ophys experiment rig
@@ -126,6 +129,28 @@ groups:
     dtype: text
     doc: Description of rig
   datasets:
+  - name: led_position
+    dtype: float
+    dims:
+    - 3
+    shape:
+    - null
+    doc: position of LED (x, y, z)
+    attributes:
+    - name: unit_of_measurement
+      dtype: text
+      doc: Unit of measurement for the data
+  - name: monitor_position
+    dtype: float
+    dims:
+    - 3
+    shape:
+    - null
+    doc: position of monitor (x, y, z)
+    attributes:
+    - name: unit_of_measurement
+      dtype: text
+      doc: Unit of measurement for the data
   - name: monitor_rotation
     dtype: float
     dims:
@@ -148,17 +173,6 @@ groups:
     - name: unit_of_measurement
       dtype: text
       doc: Unit of measurement for the data
-  - name: led_position
-    dtype: float
-    dims:
-    - 3
-    shape:
-    - null
-    doc: position of LED (x, y, z)
-    attributes:
-    - name: unit_of_measurement
-      dtype: text
-      doc: Unit of measurement for the data
   - name: camera_rotation
     dtype: float
     dims:
@@ -166,17 +180,6 @@ groups:
     shape:
     - null
     doc: rotation of camera (x, y, z)
-    attributes:
-    - name: unit_of_measurement
-      dtype: text
-      doc: Unit of measurement for the data
-  - name: monitor_position
-    dtype: float
-    dims:
-    - 3
-    shape:
-    - null
-    doc: position of monitor (x, y, z)
     attributes:
     - name: unit_of_measurement
       dtype: text
