--- a/.github/workflows/github-actions-ci.yml
+++ b/.github/workflows/github-actions-ci.yml
@@ -33,7 +33,7 @@ jobs:
           export PATH="/home/runner/.local/bin:${PATH}"
           git fetch origin master
           # `|| true` to force exit code 0 even if no files found
-          CHANGED_PYFILES=$(git diff --name-only --diff-filter AM origin/master | grep .py || true)
+          CHANGED_PYFILES=$(git diff --name-only --diff-filter AM origin/master allensdk | grep -e ".*.py$" || true)
           echo "List of changed files:"
           echo ${CHANGED_PYFILES}
           flake8 ${CHANGED_PYFILES} --count
