--- a/.github/workflows/github-actions-ci.yml
+++ b/.github/workflows/github-actions-ci.yml
@@ -2,7 +2,7 @@ name: ci/github-actions
 on:
   push:
     branches:
-      - main
+      - master
   pull_request:
 env:
   TEST_NWB_FILES: skip
@@ -31,9 +31,9 @@ jobs:
         run: |
           pip install flake8
           export PATH="/home/runner/.local/bin:${PATH}"
-          git fetch origin main
+          git fetch origin master
           # `|| true` to force exit code 0 even if no files found
-          CHANGED_PYFILES=$(git diff --name-only --diff-filter AM origin/main allensdk | grep -e ".*.py$" || true)
+          CHANGED_PYFILES=$(git diff --name-only --diff-filter AM origin/master allensdk | grep -e ".*.py$" || true)
           echo "List of changed files:"
           echo ${CHANGED_PYFILES}
           flake8 ${CHANGED_PYFILES} --count
