--- a/requirements.txt
+++ b/requirements.txt
@@ -14,14 +14,14 @@ requests-toolbelt<1.0.0
 simplejson>=3.10.0,<4.0.0
 scikit-image>=0.14.0,<0.17.0
 scikit-build<1.0.0
-statsmodels==0.9.0
+statsmodels<=0.13.0
 simpleitk>=2.0.2,<3.0.0
 argschema<3.0.0
 marshmallow==3.0.0rc6
 glymur==0.8.19
 xarray<0.16.0
 pynwb>=1.3.2,<2.0.0
-tables==3.5.1 # pinning this because updates tend to not include wheels immediately
+tables>=3.6.0,<4.0.0
 seaborn<1.0.0
 aiohttp==3.7.4
 nest_asyncio==1.2.0
