--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 psycopg2-binary>=2.7,<3.0.0
-hdmf<2.5.0
-h5py>=2.8,<3.0.0
+hdmf>=2.5.6,<3.0.0
+h5py>=2.9.0,<3.0.0
 matplotlib>=1.4.3,<4.0.0
-numpy>=1.15.4,<1.19.0
-pandas>=0.25.1,<=0.25.3
+numpy>=1.16.0,<1.21.0
+pandas>=1.0.5,<2.0.0
 jinja2>=2.7.3,<2.12.0
 scipy>=1.4.0,<2.0.0
 six>=1.9.0,<2.0.0
@@ -20,7 +20,7 @@ argschema<3.0.0
 marshmallow==3.0.0rc6
 glymur==0.8.19
 xarray<0.16.0
-pynwb>=1.3.2,<2.0.0
+pynwb>=1.5.1,<2.0.0
 tables>=3.6.0,<4.0.0
 seaborn<1.0.0
 aiohttp==3.7.4
