--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -1,7 +1,7 @@
 name: ci/nightly
 on:
   schedule:
-    - cron: '35 21 * * *'
+    - cron: '05 18 * * *'
 
 jobs:
   onprem:
@@ -27,6 +27,7 @@ jobs:
               ${{ matrix.image }} \
                   /bin/bash -c "pip install -r requirements.txt; \
                                 pip install -r test_requirements.txt; \
+                                pip install -e .; \
                                 python -m pytest allensdk/test/test_inline_examples.py \
                                     --cov=allensdk \
                                     --cov-config coveragerc \
