--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 psycopg2-binary>=2.7,<3.0.0
-hdmf<2.5.0
+hdmf==2.5.8
 h5py>=2.8,<3.0.0
 matplotlib>=1.4.3,<3.4.3
 numpy>=1.15.4,<1.19.0
-pandas>=0.25.1,<=0.25.3
+pandas==1.0.5
 jinja2>=2.7.3,<2.12.0
 scipy>=1.4.0,<2.0.0
 six>=1.9.0,<2.0.0
@@ -17,7 +17,7 @@ scikit-build<1.0.0
 statsmodels<=0.13.0
 simpleitk>=2.0.2,<3.0.0
 argschema>=3.0.1,<4.0.0
-glymur==0.8.19
+glymur==0.9.3
 xarray<0.16.0
 pynwb>=1.3.2,<2.0.0
 tables>=3.6.0,<4.0.0
