--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       matrix:
         image: ["allensdk_local_py37:latest"]
-        branch: ["master"]
+        branch: ["master", "rc/2.13.1"]
     steps:
       - uses: actions/checkout@v2
         with:
