--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 psycopg2-binary>=2.7,<3.0.0
-hdmf>=2.5.8
-h5py>=2.8,<3.0.0
+hdmf>=3.1.1
+h5py>=3.0.0
 matplotlib>=1.4.3,<3.4.3
 numpy
 pandas>=1.1.5
@@ -19,7 +19,7 @@ simpleitk>=2.0.2,<3.0.0
 argschema>=3.0.1,<4.0.0
 glymur==0.8.19
 xarray<0.16.0
-pynwb>=1.3.2,<2.0.0
+pynwb>=2.0.0
 tables>=3.6.0,<4.0.0
 seaborn<1.0.0
 aiohttp==3.7.4
