--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ psycopg2-binary>=2.7,<3.0.0
 hdmf>=2.5.6
 h5py>=2.90
 matplotlib>=1.4.3,<3.4.3
-numpy
+numpy>=1.16.0
 pandas>=1.1.5
 jinja2>=2.7.3,<2.12.0
 scipy>=1.4.0,<2.0.0
