--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ psycopg2-binary>=2.7,<3.0.0
 hdmf
 h5py
 matplotlib>=1.4.3,<3.4.3
-numpy>=1.16.0
+numpy
 pandas>=1.1.5
 jinja2>=2.7.3,<2.12.0
 scipy>=1.4.0,<2.0.0
@@ -19,7 +19,7 @@ simpleitk>=2.0.2,<3.0.0
 argschema>=3.0.1,<4.0.0
 glymur==0.8.19
 xarray<0.16.0
-pynwb>=1.5.1
+pynwb
 tables>=3.6.0,<4.0.0
 seaborn<1.0.0
 aiohttp==3.7.4
