--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,7 @@ pynwb
 tables>=3.6.0,<4.0.0
 seaborn<1.0.0
 aiohttp==3.7.4
-nest_asyncio==1.2.0
+nest_asyncio
 tqdm>=4.27
 ndx-events<=0.2.0
 boto3==1.17.21
