--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ hdmf>=2.5.8
 h5py
 matplotlib>=1.4.3,<3.4.3
 numpy
-pandas>=1.1.5
+pandas>=1.1.5,<1.3.5
 jinja2>=2.7.3,<2.12.0
 scipy>=1.4.0,<2.0.0
 six>=1.9.0,<2.0.0
