--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,18 @@
 psycopg2-binary>=2.7,<3.0.0
 hdmf>=2.5.8
 h5py
-matplotlib>=1.4.3,<3.4.3
+matplotlib>=1.4.3
 numpy
 pandas>=1.1.5
 jinja2>=2.7.3,<2.12.0
-scipy>=1.4.0,<2.0.0
+scipy>=1.4.0
 six>=1.9.0,<2.0.0
 pynrrd>=0.2.1,<1.0.0
 future >= 0.14.3,<1.0.0
 requests<3.0.0
 requests-toolbelt<1.0.0
 simplejson>=3.10.0,<4.0.0
-scikit-image>=0.14.0,<0.17.0
+scikit-image>=0.14.0
 scikit-build<1.0.0
 statsmodels<=0.13.0
 simpleitk>=2.0.2,<3.0.0
